--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.6",
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.11.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
